--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,40 +1,44 @@
 $color-light-1: #fff;
 $color-dark-1: #000;
-$color-accent-1: #230597;
+$color-dark-2: #788692;
+$color-dark-3: #1c2e3d;
+$color-dark-3: rgba(#151c24, 0.6);
+$color-accent-1: #73afba;
+$color-warning: #e8594e;
 
-$font-color-base: $color-dark-1;
-$font-color-title: $color-dark-1;
-$font-color-link: $color-dark-1;
-$font-color-link--hover: rgba($color-dark-1, 0.6);
-$font-color-link--active: rgba($color-dark-1, 0.3);
-$font-color-btn: $color-dark-1;
+$font-color-base: $color-dark-2;
+$font-color-title: $color-dark-3;
+$font-color-link: $color-dark-2;
+$font-color-link--hover: rgba($color-dark-2, 0.6);
+$font-color-link--active: rgba($color-dark-2, 0.3);
+$font-color-btn: $color-light-1;
 $font-color-btn--hover: $color-light-1;
 $font-color-btn--active: rgba($color-light-1, 0.3);
 
 $bg-color-base: $color-light-1;
-$bg-color-btn: $color-light-1;
-$bg-color-btn--hover: $color-dark-1;
-$bg-color-btn--active: $color-dark-1;
+$bg-color-btn: $color-warning;
+$bg-color-btn--hover: darken($color-warning, 20%);
+$bg-color-btn--active: rgba($color-warning, 0.3);
 
-$icon-color: $color-accent-1;
-$icon-color--hover: rgba($color-accent-1, 0.6);
-$icon-color--active: rgba($color-accent-1, 0.3);
+$icon-color: $color-dark-3;
+$icon-color--hover: rgba($color-dark-3, 0.6);
+$icon-color--active: rgba($color-dark-3, 0.3);
 
-$border-color: $color-dark-1;
+$border-color: $color-dark-2;
 
 $font-base: 'Open Sans', sans-serif;
 $font-accent: 'Roboto', sans-serif;
 
 $font-size-base: 16px;
 $font-size-small: 0.8rem;
-$font-size-big: 1.2rem;
-$font-size-title: 2rem;
+$font-size-big: 2rem;
+$font-size-title: 4rem;
 
 $font-weight-base: 400;
 $font-weight-bold: 700;
 $font-weight-thin: 100;
 
-$container-width: 1200px;
+$container-width: 1570px;
 $container-padding: 30px;
 
 //breakpoint
@@ -75,5 +79,14 @@ $d-laptop: (
   max-width: $bp-des,
 );
 
-// $base-gradient: ;
-// $alt-gradient: ;
+$base-gradient: linear-gradient(
+  180deg,
+  rgba(0, 0, 0, 0.0001) 50%,
+  rgba(0, 0, 0, 0.461617) 100%
+); //inspiration overlay
+
+$alt-gradient: linear-gradient(
+  180deg,
+  rgba(28, 46, 59, 0.0001) 0%,
+  #091117 100%
+); // featured stories overlay
