--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,39 +1,22 @@
 .header {
-  $header-height: 90px;
+  $header-height: 122px;
 
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
 
-  background-color: $color-accent-1;
+  width: 100%;
 
-  &::after {
-    content: '';
-
-    position: absolute;
-    top: 0;
-
-    display: block;
-    width: 100vw;
-    height: $header-height;
-
-    background-color: $color-accent-1;
-
-    z-index: 5;
-    @media #{$tablet} {
-      display: none;
-    }
-  }
+  background-color: $color-dark-4;
 
   &__container {
+    position: relative;
+
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: $header-height;
-
-    @media #{$tablet} {
-      height: auto;
-    }
   }
 
   &__logo {
@@ -41,11 +24,10 @@
   }
 
   &__mmt {
-    position: fixed;
-    top: 25px;
-    right: 25px;
-    @media #{$tablet} {
-      display: none;
-    }
+    position: absolute;
+    top: 50%;
+    right: 0;
+
+    transform: translateY(-50%);
   }
 }
