--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,4 +1,10 @@
 .logo {
   display: flex;
   align-items: center;
+
+  text-transform: uppercase;
+  color: $color-light-1;
+  font-weight: $font-weight-bold;
+  text-decoration: none;
+  font-size: 22px;
 }
