--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  $header-height: 122px;
+  $header-height: 80px;
 
   position: fixed;
   top: 0;
@@ -7,7 +7,20 @@
 
   width: 100%;
 
-  background-color: $color-dark-4;
+  &::after {
+    content: '';
+
+    position: absolute;
+    top: 0;
+
+    display: block;
+    width: 100vw;
+    height: $header-height;
+
+    background-color: $color-dark-4;
+
+    z-index: 5;
+  }
 
   &__container {
     position: relative;
@@ -19,15 +32,14 @@
     height: $header-height;
   }
 
+  &__social-list {
+    z-index: 10;
+  }
+
   &__logo {
     z-index: 10;
   }
 
   &__mmt {
-    position: absolute;
-    top: 50%;
-    right: 0;
-
-    transform: translateY(-50%);
   }
 }
