--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -3,8 +3,17 @@
   align-items: center;
 
   text-transform: uppercase;
-  color: $color-light-1;
+  color: $logo-color;
   font-weight: $font-weight-bold;
   text-decoration: none;
   font-size: 22px;
+  line-height: 1;
+  transition: color 0.3s ease 0s;
+  &:hover,
+  &:focus {
+    color: $logo-color--hover;
+  }
+  &:active {
+    color: $logo-color--active;
+  }
 }
