--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,5 +1,5 @@
 .navigation {
-  $header-height: 122px;
+  $header-height: 80px;
   $mob-mozilla: 45px; //mobile mozilla bug with bottom navbar
 
   position: absolute;
@@ -11,7 +11,7 @@
   background-color: $color-dark-4;
   color: $color-light-1;
   z-index: 2;
-  transform: translate(-50%, -100vh);
+  transform: translate(100%, 100%);
 
   &__list {
     display: flex;
@@ -21,6 +21,7 @@
     flex-wrap: nowrap;
     max-height: calc(100vh - #{$header-height} - #{$mob-mozilla});
     overflow-y: auto;
+    padding-bottom: 0.5em;
   }
 
   &__item {
