--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,7 @@
 @import './utils/base';
 
 // third party lib
-// @import '../../node_modules/swiper/swiper.scss';
+@import '../../node_modules/swiper/swiper.scss';
 
 // scss base component
 @import './base-component/mobile-menu-toggler';
