--- a/src/scss/components/_become.scss
+++ b/src/scss/components/_become.scss
@@ -3,10 +3,17 @@
   &__container {
     padding-top: 150px;
     padding-bottom: 150px;
+    @media #{$d-mobile} {
+      padding-top: 40px;
+      padding-bottom: 40px;
+    }
   }
   // .become__heading
   &__heading {
     margin-bottom: 96px;
+    @media #{$d-mobile} {
+      margin-bottom: 40px;
+    }
   }
   // .become__list
   &__list {
