--- a/src/scss/utils/_base.scss
+++ b/src/scss/utils/_base.scss
@@ -26,7 +26,13 @@ body {
     font-size: $font-size-title;
     font-weight: $font-weight-bold;
     color: $font-color-title;
-    line-height: 80px;
+    line-height: 1.3;
+    @media #{$d-mobile} {
+      font-size: $font-size-title-mob;
+    }
+  }
+  &__title--light {
+    color: $color-light-1;
   }
 }
 
