--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -37,6 +37,7 @@ $font-size-base: 16px;
 $font-size-small: 0.8rem;
 $font-size-big: 2rem;
 $font-size-title: 4rem;
+$font-size-title-mob: 2rem;
 
 $font-weight-base: 400;
 $font-weight-bold: 700;
@@ -86,6 +87,7 @@ $d-laptop: (
 
 $base-gradient: linear-gradient(
   180deg,
+  rgba(0, 0, 0, 0.0001) 0%,
   rgba(0, 0, 0, 0.0001) 50%,
   rgba(0, 0, 0, 0.461617) 100%
 ); //inspiration overlay
@@ -93,5 +95,6 @@ $base-gradient: linear-gradient(
 $alt-gradient: linear-gradient(
   180deg,
   rgba(28, 46, 59, 0.0001) 0%,
+  rgba(28, 46, 59, 0.0001) 50%,
   #091117 100%
 ); // featured stories overlay
