--- a/src/scss/components/_become.scss
+++ b/src/scss/components/_become.scss
@@ -3,7 +3,7 @@
   &__container {
     padding-top: 150px;
     padding-bottom: 150px;
-    @media #{$d-mobile} {
+    @media #{$d-laptop} {
       padding-top: 40px;
       padding-bottom: 40px;
     }
@@ -11,7 +11,7 @@
   // .become__heading
   &__heading {
     margin-bottom: 96px;
-    @media #{$d-mobile} {
+    @media #{$d-laptop} {
       margin-bottom: 40px;
     }
   }
