--- a/src/scss/components/_photos.scss
+++ b/src/scss/components/_photos.scss
@@ -3,7 +3,7 @@
   &__container {
     padding-top: 150px;
 
-    @media #{$d-mobile} {
+    @media #{$d-laptop} {
       padding-top: 40px;
     }
   }
