--- a/src/scss/components/_become.scss
+++ b/src/scss/components/_become.scss
@@ -21,6 +21,9 @@
     gap: 2vw;
     grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     grid-auto-rows: 550px;
+    @media #{$d-laptop} {
+      grid-auto-rows: 400px;
+    }
   }
   // .become__list-item
   &__list-item {
