--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -4,7 +4,7 @@
 
   position: absolute;
   bottom: 0;
-  left: 50%;
+  left: 0;
 
   width: 100vw;
 
@@ -44,6 +44,6 @@
   }
 
   &.active {
-    transform: translate(-50%, 100%);
+    transform: translate(0, 100%);
   }
 }
