--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,8 +9,8 @@
 
 // scss base component
 @import './base-component/mobile-menu-toggler';
-@import './base-component/modal';
-@import './base-component/scrollToTop';
+// @import './base-component/modal';
+// @import './base-component/scrollToTop';
 
 // scss project components
 @import './components/*';
