--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,34 +1,37 @@
 .footer {
   border-top: 1px solid $border-color;
-  // .footer__container
+
+  //.footer__container
   &__container {
-    padding-top: 120px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px;
+    padding-top: 120px;
 
     @media #{$d-laptop} {
       padding-top: 40px;
     }
   }
-  // .footer__column
+
+  //.footer__column
   &__column {
     @media #{$d-mobile} {
       flex-basis: 100%;
     }
   }
-  // .footer__title
+
+  //.footer__title
   &__title {
     position: relative;
 
-    padding-bottom: 30px;
     margin-bottom: 30px;
+    padding-bottom: 30px;
 
-    text-transform: uppercase;
-    color: $font-color-title;
     font-size: $font-size-small;
     letter-spacing: 2px;
+    text-transform: uppercase;
+    color: $font-color-title;
 
     @media #{$d-mobile} {
       text-align: center;
@@ -42,8 +45,8 @@
       left: 0;
 
       display: block;
-      height: 1px;
       width: 48px;
+      height: 1px;
 
       background-color: $color-accent-1;
 
@@ -52,20 +55,24 @@
       }
     }
   }
-  // .footer__list
+
+  //.footer__list
   &__list {
-    // .footer__list--horizontal
+    //.footer__list--horizontal
     &--horizontal {
       display: flex;
-      & .footer__item {
+
+      .footer__item {
         margin-bottom: 0;
+
         &:not(:last-child) {
           margin-right: 40px;
         }
       }
     }
   }
-  // .footer__item
+
+  //.footer__item
   &__item {
     margin-bottom: 10px;
 
@@ -75,21 +82,25 @@
       text-align: center;
     }
   }
-  // .footer__link
+
+  //.footer__link
   &__link {
     text-decoration: none;
     color: $font-color-link;
 
     transition: all 0.3s ease 0s;
+
     &:hover,
     &:focus {
       color: $font-color-link--hover;
     }
+
     &:active {
       color: $font-color-link--active;
     }
   }
-  // .footer__subscribe
+
+  //.footer__subscribe
   &__subscribe {
     flex-basis: 370px;
 
@@ -97,17 +108,18 @@
       flex-basis: 100%;
     }
   }
-  // .footer__bottom
+
+  //.footer__bottom
   &__bottom {
     position: relative;
 
-    flex-basis: 100%;
-    padding: 30px 0;
-    margin-top: 90px;
     display: flex;
-    justify-content: space-between;
+    flex-basis: 100%;
     flex-wrap: wrap;
+    justify-content: space-between;
     gap: 30px;
+    margin-top: 90px;
+    padding: 30px 0;
 
     @media #{$d-laptop} {
       margin-top: 10px;
@@ -121,15 +133,16 @@
       left: 50%;
 
       display: block;
-      height: 1px;
       width: 100vw;
+      height: 1px;
 
       background-color: $border-color;
 
       transform: translateX(-50%);
     }
   }
-  // .footer__copyright
+
+  //.footer__copyright
   &__copyright {
     font-size: $font-size-small;
   }
