--- a/src/scss/components/_slider-big.scss
+++ b/src/scss/components/_slider-big.scss
@@ -1,16 +1,17 @@
 .slider-big {
   padding: 60px 0;
+
   @media #{$d-mobile} {
     padding: 0;
   }
 
-  // .slider-big__slide
+  //.slider-big__slide
   &__slide {
     position: relative;
 
     width: 46%;
-    min-width: 767px;
     height: 670px;
+    min-width: 767px;
 
     overflow: hidden;
     border-radius: 8px;
@@ -18,9 +19,10 @@
     transition: transform 0.3s ease 0s;
 
     @media #{$d-laptop} {
-      min-width: 80%;
       height: 400px;
+      min-width: 80%;
     }
+
     @media #{$d-mobile} {
       min-width: 90%;
     }
@@ -36,8 +38,8 @@
       width: 100%;
       height: 100%;
 
-      opacity: 0;
       background-image: $alt-gradient;
+      opacity: 0;
 
       transition: opacity 0.3s ease 0s;
     }
@@ -48,29 +50,34 @@
       @media #{$d-mobile} {
         transform: scale(1);
       }
+
       &::before {
         opacity: 1;
       }
+
       .slider-big__title {
         transform: translateY(0);
       }
     }
   }
-  // .slider-big__img
+
+  //.slider-big__img
   &__img {
-    height: 100%;
     width: 100%;
+    height: 100%;
   }
-  // .slider-big__title
+
+  //.slider-big__title
   &__title {
     position: absolute;
     bottom: 0;
 
-    padding: 0 40px 40px 40px;
-    color: $color-light-1;
-    font-size: $font-size-big;
+    padding: 0 40px 40px;
 
-    transition: transform 0.3s ease 0s;
+    font-size: $font-size-big;
+    color: $color-light-1;
+
     transform: translateY(100%);
+    transition: transform 0.3s ease 0s;
   }
 }
